tests/machine/x/go/tree_sum.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:34:13Z

package main

import (
	"fmt"
)

type Leaf struct {
}

type Node struct {
	Left  Tree `json:"left"`
	Value int  `json:"value"`
	Right Tree `json:"right"`
}

type v map[string]any

// line 9
func sum_tree(t Tree) int {
	return int(func() any {
		_t := t
		if _, ok := _t.(Leaf); ok {
			return 0
		}
		if tmp0, ok := _t.(Node); ok {
			left := tmp0.Left
			value := tmp0.Value
			right := tmp0.Right
			return ((sum_tree(left) + value) + sum_tree(right))
		}
		return nil
	}())
}

var t Node

func main() {
	t = Node{Left: Tree(Leaf{}), Value: 1, Right: Node{Left: Tree(Leaf{}), Value: 2, Right: Tree(Leaf{})}}
	fmt.Println(sum_tree(t))
}
